--- a/styles/style.css
+++ b/styles/style.css
@@ -104,6 +104,7 @@ body {
     font-size: 40px;
     font-weight: 700;
     padding-top: 20px;
+    text-align: center;
     font-family: "Poppins", sans-serif;
 }
 
