changes by client

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,7 @@ body {
 .cardPara{
     text-align: center;
     margin: 20px 0;
+    font-style: italic;
 }
 
 /************** Products ************/
