--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,8 @@ body {
   align-items: center;
 }
 
-.cardExperience {
+.cardExperience.card{
+  width: 90vw;
   background: #4DFF94;
   display: flex;
   flex-direction: column;
@@ -163,6 +164,14 @@ body {
   padding-bottom: 50px;
   padding: 10px;
 }
+.aboutMain{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
 
 .aboutHeading {
   text-align: center;
@@ -201,6 +210,7 @@ body {
 }
 
 .aboutCompany {
+  margin-left: 2vw;
   line-height: 1.5;
   font-size: 14px;
 }
